cluster/apps/filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  labels:
    app: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:v2.63.16
          args:
            - "--noauth"                # Pas de mot de passe (pour le réseau local)
            - "--address=0.0.0.0"       # INDISPENSABLE pour que K8s puisse y accéder
            - "--port=80"               # Port interne
            - "--root=/data"            # Le dossier à explorer
            - "--database=/config/filebrowser.db" # Sauvegarde des réglages
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /config
      volumes:
        - name: data
          hostPath:
            path: /mnt/data/movies
            type: Directory
        - name: config
          emptyDir: {}
