cluster/apps/filebrowser/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser-svc
spec:
  selector:
    app: filebrowser
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
